export enum ApplicationStatus {
  Pending = 'pending',
  Approved = 'approved',
  Denied = 'denied',
}
