export interface UserDTO {
    name: string;
    email: string;
    password: string;
    phoneNumber: string;
    birthDate: Date;
    role: string;
    morada: string;
}